--- a/RabbitMQ/应答队列.md
+++ b/RabbitMQ/应答队列.md
@@ -8,8 +8,9 @@ tags: [rabbitMQ]
 
 ### 什么时候需要应答队列
 当一条消息被消费者处理后，需要告知生产者一些信息时，消费者就需要在应答队列上发布一条应答消息。当应答消息被生产者处理后，应答队列就应该被删除
+这时，生产者就像客户端的角色，而消费者就像服务器的角色。由此可知，应答队列应该与消息一对一存在，并且队列名称唯一，应答消息被处理后，队列就应该删除。很棒的是，RabbitMQ的匿名队列很好的满足了这个特性.
 
-这时，生产者就像客户端的角色，而消费者就像服务器的角色。由此可知，应答队列应该与消息一对一存在，并且队列名称唯一，应答消息被处理后，队列就应该删除。很棒的是，RabbitMQ的匿名队列很好的满足了这个特性
+
 
 ### 上代码
 
