--- a/RabbitMQ/应答队列.md
+++ b/RabbitMQ/应答队列.md
@@ -28,4 +28,4 @@ tags: [rabbitMQ]
 
 我们知道，RabbitMQ中的队列要绑定到交换器上，才能通过路由将消息正确的投递到队列上，但是上面的服务端发送应答消息时，将消息头中的应答队列设置为消息的路由key，并没有绑定的动作，为什么也行得通呢？
 
-其实，不同于通过RabbitMQ发布的任何其他消息，这里没有交换器。这是关于通过Rabbit来实现RPC通信的唯一两处特别的地方：使用reply_to作为发布应答消息的目的地，同时发布的时候无须指定交换器
+其实，不同于通过RabbitMQ发布的任何其他消息，这里没有交换器。这是关于通过Rabbit来实现RPC通信的唯一两处特别的地方：使用reply_to作为发布应答消息的目的地，同时发布的时候无须指定交换器。
