--- a/RabbitMQ/应答队列.md
+++ b/RabbitMQ/应答队列.md
@@ -1,7 +1,7 @@
 ---
 title: RabbitMQ应答队列
 date: 2022-06-27 22:57:24
-tags: [rabbitMQ,3]
+tags: [rabbitMQ]
 ---
 
 生产者在某个队列上等待消费者返回的消息， 这个队列被称为应答队列,RabbitMQ 天生支持应答队列的机制。
