--- a/sql/存储过程添加列.md
+++ b/sql/存储过程添加列.md
@@ -23,7 +23,7 @@ begin
 end;
 
 set @result = '';
-call add_col('zyb_employee','senior_1 ','tinyint(1) NULL DEFAULT 0 COMMENT "是否是高级用户，0 不是  1 是"',@result);
+call add_col('dc_employee','senior_1 ','tinyint(1) NULL DEFAULT 0 COMMENT "是否是高级用户，0 不是  1 是"',@result);
 select @result;
 
 ```
