--- a/HTTP/为什么把某些参数放在请求头中.md
+++ b/HTTP/为什么把某些参数放在请求头中.md
@@ -1,7 +1,7 @@
 ---
 title: 为什么把某些参数放在请求头中
 date: 2021-10-27 22:12:48
-tags: [HTTTP]
+tags: [HTTTP,go]
 ---
 在HTTP协议中，首部和请求体是分开传输的，将一些认证信息参数放在请求头中，服务端先解析请求头，如果认证不通过，可以直接返回认证失败，不用再传输请求体，从而提高服务器的性能。
 下面做实验验证,实验思路：
@@ -68,3 +68,5 @@ curl -i --location --request GET '127.0.0.1:8080/test'  --header 'Authorization:
 
 ## 总结
 由此证明，请求头和请求体时分开传输的, 我们往往把一些身份认证信息等放在首部，便于服务快速的响应。此外还需注意一点，在一些web框架中提供的通用身份校验中间件，或者自己编写的请求过滤器，需要先解析请求头，再解析请求体。才能利用上此特性。
+
+![](../images/Pasted%20image%2020220729162429.png)
