--- a/sql/索引的本质.md
+++ b/sql/索引的本质.md
@@ -4,7 +4,7 @@ tags: [索引,MySQL]
 date: 2022-07-31 23:48:52
 ---
 
-### 索引是什么
+## 索引是什么
 索引是帮助MySQL高效获取数据的**排好序的数据结构**
 
 最重要的点是**有序的**，我们用索引就是为了快速的查找数据，如果一堆数据是无序的，程序只能挨个遍历每个元素，对比值，才能找到某个元素，最坏的情况要比对N次， N 是这一堆数据的长度。如果数据是有序的，我们就可以使用二分查找算法，他的时间复杂度是 O(long N)，效率比直接挨个查找快的多。
@@ -53,7 +53,7 @@ date: 2022-07-31 23:48:52
 
 红黑树（平衡二叉树）： 虽然会自动平衡节点位置，但仍然高度不可控。表比较大时会导致树的高度很高。增加查找次数
 
-### 为什么最终选择B+树  而不是B树
+#### 为什么最终选择B+树  而不是B树
 
 要解决这个疑问，我们需要知道这两种树的构造，如下图
 
@@ -147,7 +147,7 @@ hash 索引原理如下：
 - ibd 表数据加索引
 
 #### 表数据组织形式
-![](../images/20220720224051883_12060.png =711x)
+![](../images/20220720224051883_12060%202.png)
 
 
 表结构本身就是按照 B+ Tree 结构存储， 叶子节点放的是出索引列其他列的数据
