--- a/sql/索引的本质.md
+++ b/sql/索引的本质.md
@@ -113,7 +113,7 @@ hash 索引原理如下：
 
 #### 不支持范围查询
 
-图中有些歧义，Hash 后的值是没有顺序的，也不是整数，所以无法进行高效的范围查询或 in 查询
+图中有些歧义，Hash 后的值是没有顺序的，也不是整数，所以无法进行高效的范围查询查询
 
 #### hash 冲突问题
 如果在某列上有很多相同的行，比如 name 字段，叫 张三的人非常多。会产生很多次hash冲突，只能退化成列表搜索了
