--- a/java/G1垃圾收集器.md
+++ b/java/G1垃圾收集器.md
@@ -4,7 +4,7 @@ date: 2022-09-10 08:58:04
 tags: [java]
 ---
 
-G1 (Garbage-First) 是一款面向服务器的垃圾收集器，主要针对**多颗处理器及大容量内存**的机器，具备**极短的 GC 停顿时间**和高吞吐量的特征
+G1 (Garbage-First) 是一款面向服务器的垃圾收集器，主要针对**多颗处理器及大容量内存**的机器，具备**极短的 GC 停顿时间**和高吞吐量的特征.
 
 ## G1 堆内存划分
 
