--- a/java/并发编程中的可见性,原子性，有序性问题.md
+++ b/java/并发编程中的可见性,原子性，有序性问题.md
@@ -8,7 +8,7 @@ tags: [java,hidden]
 ![](../images/Pasted%20image%2020220915082649.png)
 
 ![](../images/Pasted%20image%2020220915083920.png)
-这种模型和 jvm 中的堆不同， JMM 是抽象概念，不真实存在。他是一种规范，指定了程序中的各变量的访问方式
+这种模型和 jvm 中的堆不同， JMM 是抽象概念，不真实存在。**它是一种规范，指定了程序中的各变量的访问方式**
 
 ### 主内存
 JMM 规定所有变量都存放在主内存，主内存是所有线程共享的，但是线程的操作在线程的工作内存中进行，先从主内存读取到线程的工作内存中，然后执行操作，再将工作内存中的值写入主内存中。线程不能直接操作主内存中的数据
@@ -65,7 +65,7 @@ public class CodeVisibility {
 
 ![](../images/Pasted%20image%2020220915090631.png)
 
-可见看到线程A久久不能结束，虽然 线程B此时已经修改了 initFlag 的值，但是线程A无法读取到最新值，因为一直没有和主内存同步
+可见看到线程A久久不能结束，虽然线程B此时已经修改了 initFlag 的值，但是线程A无法读取到最新值，因为一直没有和主内存同步
 
 ### volatile 
 这个关键词可以让变量被修改后立刻使其他线程中的副本可见。在上面的示例代码中，把第3行注释，第4行取消注释后再运行:
@@ -85,7 +85,7 @@ public class CodeVisibility {
 ### volatile  番外
 如果不对 initFlag  添加 volatile 标识，线程A就永远无法读取到initFlag的最新值吗？
 
-不一定， 在判断 initFlag 的值时，CPU 先从缓存中取值，只要缓存失效，就会重新在从内存中加载。那么什么时候缓存会失效呢？ 对于CPU缓存来说，分为 L1 L2 L3 三级缓存，也就是离CPU最近的那些寄存器，他们的速度依次递减，容量一次递增。而每次CPU缓存的单位不是某个变量所占的空间大小，而是固定的字节单位 ，这样就能减少CPU和内存交互的次数，更好的利用空间局部原理和时间局部性原理。具体细节可以搜索 CPU缓存相关信息
+不一定， 在判断 initFlag 的值时，CPU 先从缓存中取值，只要缓存失效，就会重新在从内存中加载。那么什么时候缓存会失效呢？ 对于CPU缓存来说，分为 L1 L2 L3 三级缓存，也就是离CPU最近的那些寄存器，他们的速度依次递减，容量依次递增。而每次CPU缓存的最小单位不是某个变量所占的空间大小，而是固定的字节 ，这样就能减少CPU和内存交互的次数，更好的利用空间局部原理和时间局部性原理。具体细节可以搜索 CPU缓存相关信息
 
 因为CPU一次会让一批缓存失效，有可能 initFlag 的缓存会随着其他值失效而重新从内存加载最新值。如下例子:
 
@@ -211,6 +211,56 @@ public class VolatileReOrderSample {
 这个执行重排的操作在单线程下没有关系，因为没有影响到最终的执行的结果，但是如果是多线程的场景，就像上面的那个例子，就会发生错误
 
 ### 如何禁止指令重排
+
+#### volatile 
+volatile 另一个作用是禁止指令重排，避免多线程下出现乱序执行的情况
+重排规则表:
+![](../images/Pasted%20image%2020220916184429.png)
+
+从上面的规则可以看出：
+- 当第二个操作是 volatile 写时，不管第一个操作是什么，都不能发生重排，
+- 当第一个操作是 volatile 读时，不管第二个操作是什么，都不能发生重排
+- 当第一个操作时 volatile 写，第二个操作是 volatile 读时，不能发生重排
+
+#### 加锁保证有序性
+另外还可以使用 synchronize 和 lock 来保证有序性，因为加锁后，每时每刻只有一个线程执行代码，**指令重排对单线程没有影响**
+
+### 禁止指令重排的经典应用
+
+看下懒汉模式的单例的问题:
+```java
+// 懒汉模式 + synchronized 同步锁 + double-check
+public final class Singleton {
+    private static Singleton instance= null;// 不实例化
+    private Singleton(){}// 构造函数
+    public static Singleton getInstance(){// 加同步锁，通过该函数向整个系统提供实例
+        if(null == instance){// 第一次判断，当 instance 为 null 时，则实例化对象，否则直接返回对象
+          synchronized (Singleton.class){// 同步锁
+             if(null == instance){// 第二次判断
+                instance = new Singleton();// 实例化对象
+             }
+          } 
+        }
+        return instance;// 返回已存在的对象
+    }
+}
+```
+
+为了在多线程并发场景下单例仍然有效，加了锁以及双重检测，但是就万无一失了吗？
+
+在第一个判断 `if(null == instance)` 中，会出先变量instance有值，但是内存区域是空的（没有初始化 ），从而导致程序出现问题。造成这个问题的原因在于 `instance = new Singleton()`，事实上初始化对象操作不是原子性的，它包含下面两个动作:
+1. 给对象分配内存空间，
+2. 内存空间的初始化
+3. 将内存地址赋值给变量
+
+其中2，3没有依赖关系，经过 编译器或者cpu指令重排后，可能会导致 2,3顺序发生变化：
+1. 给对象分配内存空间，
+3. 将内存地址赋值给变量 //此时变量已经不等于 null, 但是变量指向的内存区域还没有初始化
+2. 内存空间的初始化
+
+假设线程A按照第二种顺序执行，在执行完步骤3时，还没有执行步骤2，线程B执行到第一个`if(null == instance)`判断，就会直接返回 instance。  这样对于线程B来说 `getInstance()` 方法返回的是一个没有经过初始化的对象，导致程序出现问题
+
+解决问题的方法很简单： `private volatile static Singleton instance= null;` 使用 volatile 关键词禁止 instance 变量被执行指令重排优化即可
 
 ## 原子性问题
 指的使一个操作是不可中断的，即使在多线程环境下，一旦操作开始就不会被其他线程影响
