--- a/1.md
+++ b/1.md
@@ -1,196 +1,343 @@
 
-## Class常量池
-Class常量池可以理解为class文件中的资源仓库，class 文件中除了包含类信息，方法，字段，接口信息之外还有常量池信息，用于存放编译期生成的各种字面量和符号引用
+JDK1.5以前只有synchronized同步锁，并且效率非常低，大神Doug Lea自己写了一套并发框架，这套框架的核心就在于AbstractQueuedSynchronizer类（即AQS），性能非常高，所以被引入JDK包中，即JUC。那么AQS是怎么实现的呢？本篇就是对AQS及其相关组件进行分析，了解其原理。
 
-如下:
-![](https://s2.loli.net/2022/09/18/d5I4cMJwemb1Cx6.png)
+## AQS 的应用
+我们经常使用并发包中的阻塞队列(ArrayBlockingQueue), 可重入锁（ReentrantLock），线程栅栏（CountDownLatch）等一些工具底层都是由AQS实现的
 
+## AQS 大致结构
+![](https://s2.loli.net/2022/10/09/IcLDu1QmzGhAFRb.png)
 
-常量池主要包含两大类常量: 字面量和符号引用
+## ReentrantLock 实现原理
 
-## 字面量
-字面量就是有字符串和数字等构成的常量。
+ReentrantLock 使用简单，我们就以这个类为切入口，学习一下如何利用 AQS 实现加锁释放锁的功能，以及公平和非公平锁实现的差别.
 
-字面量只能以右值出现，int a = 1, a 是左值，1 是右值
+### 加锁
 
-
-```java
-int a =1;
-int b =2;
-String c= "abc"；
-String d= "abc"；
-```
-
-1 2  "abc" 都是常量
-
-## 符号引用
-
-符号引用是编译原理中概念，是相对于直接引用来说的，主要包括一三类常量:
-- 类和接口的全限定名
-- 字段的名称和描述符
-- 方法的名称和描述符
-
-上面的 a b就是字段名 ，是符号引用。 还有包名+类名 组成的类的全限定名，方法名，以及() 都是符号引用
-
-## 运行常量池
-
-存在class 文件的常量都是静态信息，只有到运行时被加载到内存中，这些符号才有具体的内存地址，这些常量一旦被加载内存中，就变成运行常量池，对应的符号引用在程序运行时，会被加载到内存区域的代码直接引用，也就我们说的动态链接，例如： compute() 这个符号引用在运行时就会被转化成compute()方法具体代码在内存中的地址，
-
-
-## 字符串常量池
-
-在内存中专门存放字符串字面量的区域称作字符串常量池，那么除了把对象放入堆中之外。还需要独立的区域存放字符串字面量呢？
-
-
-主要是为了性能：
-- 字符串的分配和其他对象分配一样，耗费高昂的时间与空间代价，作为最基础的数据类型，需要大量频繁的创建，极大影响了程序的性能
-
-
-
-JVM 为了提高性能和减少内存开销，在实例化字符串常量的时候进行了一些优化：
-1. 为字符串开辟一个字符串常量池，类似于缓存
-2. 创建字符串常量时，首先查询字符串常量池是否已经存在
-3. 若存在该字符串，直接返回引用示例，不存在，实例化该字符串并放入池中
-
-### 什么时候会把字符串常量放入常量池
-
-1. 直接赋值字符串
-```java
-String s = "hello"；
-```
-
-**这种方式创建的字符串只会在常量池中，不会在堆中额外创建一个对象** 
-
-当再次创建字符串 `String s1 = "hello"` 时，先去常量池中通过 `equals(key)` 方法判断是否有相同的对象，如果有直接返回对象在常量池的引用。如果没有会在常量池新新建对象，再返回引用
-
-所以有如下结果:
+查看 ReentrantLock 的构造方法： 
 
 ```java
-String s = "hello"；
-String s1 = "hello"；
-System.out.println( s == 1) // true. s 和 s1 地址一样
-```
+// 无参构造器默认构造一个非公平锁
+public ReentrantLock() {  
+    sync = new NonfairSync();  
+}  
 
-
-2. new String()
-
-```java
-String s = new String("hello");
-```
-
-这中方式创建字符串会保证常量池中和堆中都有这个对象，最后返回堆中的地址:
-![](https://s2.loli.net/2022/09/18/rIknpVPHQXJ13qv.png)
-
-3. intern 方法
-```java
-String s = new String("hello")；
-String s1 = s.intern();
-System.out.println(s == s1) // false
-```
-String intern 方法是一个 native 方法，如果池中已经包含一个等于此 String 对象的字符串，则返回池中的字符串，**否则将intern 返回的引用指向当前字符串（在 jdk 1.6 中，需要将s1字符串复制到常量池中）**
-
-在第一种情况，`String s = "hello"` 会将 `hello` 放入常量池中， 第二种情况 `String s = new String("hello")` 也会将 `hello` 放入常量池中，那么什么情况下常量池会没有我们要取的字符串呢？
-
-常量池存放的一定是不可变的字面量, 无论是 `String s = "hello"` 还是 `String s = new String("hello")` 都有一个明确的字面量: `hello` 如果是下面这种情况:
-```java
-String s = new String("hello") + new String("World")
-String s1 = "helloWorld"；
-System.out.println(s == s1) // false
-System.out.println(s == s.intern()) // true
-
-```
-常量池中有 `hello` 和 `World` 但是没有 `helloWorld`， 因为在代码中没有明确的`helloWorld`字面量，所以 s != s1, 常量池中没有 `helloWorld` 字面量，所以 `s.intern()` 返回的是堆中的地址，故而 `s == s.intern()`
-
-
-
-再看下面一种情况:
-
-```java
-String s = "hello" + "World"；
-String s1 = "helloWorld"； 
-System.out.println(s == s1) // true
-```
-
-代码中也没有明确的`helloWorld` 字面量， 为什么 s == s1 呢， 因为 `hello` 和 `World` 都是**不可变**的字面量，而不是一个引用，在 `String s = "hello" + "World"` 时， 编译器可以优化成 `s = "helloWorld"` ， 所以 s == s1 ，那为什么 `String s = new String("hello") + new String("World")` 不会被编译器优化呢？ 因为 `new String("hello")` 是一个对象，返回的是引用，而不是一个不会变化的字面量，后面这个引用地址可能会指向其他的对象，优化后可能会出现错误。同理：
-```java
-String s = "hello";
-String s1 = "World"；
-String s2 = s + s1; // 不会编译器优化成 "helloWorld"
-String s3 = "helloWorld";
-System.out.println(s3 == s2); // false
-```
-
-但是被 final 修饰的变量可以被优化，因为它不会发生变化了：
-
-```java
-final String s = "hello"; // s 不会再被重新赋值
-final String s1 = "World"；
-String s2 = s + s1; // 编译器优化成 "helloWorld"
-String s3 = "helloWorld";
-System.out.println(s3 == s2); // true
-```
-
-再看下面一种情况：
-
-
-```java
-final String s = getHello(); // s 虽然不能再被重新赋值，但getHello() 方法返回的值可能会改变
-final String s1 = "World"；
-String s2 = s + s1; // 不会编译器优化成 "helloWorld"
-String s3 = "helloWorld";
-System.out.println(s3 == s2); // false
-
-public String getHello(){
-    return "hello"
+// 可以指定使用公平锁还是非公平锁
+public ReentrantLock(boolean fair) {  
+    sync = fair ? new FairSync() : new NonfairSync();  
 }
 ```
 
-s 的值无法再编译器确定，所以无法优化成字面量
+由此可知，ReentrantLock 的公平锁和非公平锁分别是由 `FairSync`  和 `NonfairSync`实现的，
 
-再看最后一个例子：
+由下面的结构图可知，`FairSync ` 和 `NonfairSync ` 都是继承至 `Sync` ,而 `Sync` 又是继承 AQS
+![](https://s2.loli.net/2022/10/09/Gys7jk1lDJR3KtA.png)
+
+非公平锁加锁的代码:
 ```java
-
-String s1 = new String("hello") + new String("World")；
-System.out.println(s1 == s1.intern()) // true
-
-String s = new String("ja") + new String("va")；
-System.out.println(s == s.intern()) // false
+// 非公平锁
+static final class NonfairSync extends Sync {
+  private static final long serialVersionUID = 7316153563782823691L;
+  // 获取锁
+  final void lock() {
+    // 假设t1 线程正在尝试获取锁。
+    // CAS算法，把 state 从0修改为1，state 表示当前被加锁的次数
+    // 从0变成1，表示t1第一次尝试获取锁
+    if (compareAndSetState(0, 1))
+      // 如果修改成功，就把t1设置成正在持有锁的线程
+      setExclusiveOwnerThread(Thread.currentThread());
+    else
+      // 未获取到锁...
+      acquire(1);
+  }
+}
 ```
-为什么同样的写法，结果却不一样呢？
 
-intern() 方法优先返回常量池中的地址, 常量池不存在时，再返回堆中的地址， 第一个 s1 != s1.intern() 是符合我们直觉的，因为常量池中没有 helloWorld , 但是第二个 s == s.intern() 为false 就说不通了，难道常量池已经有 `java` 这个字面量了吗？ 是的， java 这个关键词，在jvm 启动或类加载期间肯定有 `java` 这个字符串已经放入到常量池中了， s.inern() 返回的是常量池中的地址.
+accquire(1) 实现:
 
-## 八种基本类型的包装类和对象池  
-java中基本类型的包装类的大部分都实现了常量池技术(严格来说应该叫对象池，在堆上)，这些类是   Byte,Short,Integer,Long,Character,Boolean,另外两种浮点数类型的包装类则没有实现。另外   Byte,Short,Integer,Long,Character这5种整型的包装类也只是在对应值小于等于127时才可使用对象池，也即对象不负责创建和管理o大于127的这些类的对象。因为一般这种比较小的数用到的概率相对较大
 ```java
-public class Test {
+public final void acquire(int arg) {
+  // tryAcquire(arg)：尝试抢锁
+  // addWaiter(Node.EXCLUSIVE)，将当前线程构造成一个队列节点，并入队
+  // acquireQueued（...） 将线程挂起，维护线程节点的状态
+  if (!tryAcquire(arg) &&
+      acquireQueued(addWaiter(Node.EXCLUSIVE), arg))
+    selfInterrupt();
+}
 
-    public static void main(String[] args) {
-        //5种整形的包装类Byte,Short,Integer,Long,Character的对象，  
-        //在值小于127时可以使用对象池  
-        Integer i1 = 127;  //这种调用底层实际是执行的Integer.valueOf(127)，里面用到了IntegerCache对象池
-        Integer i2 = 127;
-        System.out.println(i1 == i2);//输出true  
+```
 
-        //值大于127时，不会从对象池中取对象  
-        Integer i3 = 128;
-        Integer i4 = 128;
-        System.out.println(i3 == i4);//输出false  
-        
-        //用new关键词新生成对象不会使用对象池
-        Integer i5 = new Integer(127);  
-        Integer i6 = new Integer(127);
-        System.out.println(i5 == i6);//输出false 
+大致意思就是，线程再抢一次锁，如果失败了，就构造一个线程节点，然后把节点放入队列，将线程挂起，等待被唤醒
 
-        //Boolean类也实现了对象池技术  
-        Boolean bool1 = true;
-        Boolean bool2 = true;
-        System.out.println(bool1 == bool3);//输出true  
+再次抢锁代码: tryAcquire(arg):
 
-        //浮点类型的包装类没有实现对象池技术  
-        Double d1 = 1.0;
-        Double d2 = 1.0;
-        System.out.println(d1 == d2);//输出false  
+```java
+// 非公平锁尝试获取锁
+final boolean nonfairTryAcquire(int acquires) {  
+  final Thread current = Thread.currentThread(); 
+  // 获取已经加锁的次数
+  int c = getState();  
+  // 没有线程持有锁
+  if (c == 0) {  
+    // 直接抢锁。没有判断队列中是否有线程排队，插队，不公平
+    if (compareAndSetState(0, acquires)) { 
+      // 抢锁成功
+      setExclusiveOwnerThread(current);  
+      return true;            }  
+  }  
+  // 正在有线程持有锁，并且这个线程是自己(t1)
+  else if (current == getExclusiveOwnerThread()) {  
+    // t1 已经获取到锁，无需再次获取锁，只需把锁的次数增加即可
+    int nextc = c + acquires;  
+    if (nextc < 0) // overflow  
+      throw new Error("Maximum lock count exceeded");  
+    // 设置锁的次数
+    setState(nextc);  
+    return true;        
+  }  
+  return false;  
+}
+```
+
+#### 公平锁的实现
+
+```java
+protected final boolean tryAcquire(int acquires) {
+  final Thread current = Thread.currentThread();
+  int c = getState();
+  if (c == 0) {
+    // hasQueuedPredecessors： 当线程尝试获取锁时，不是直接去抢，
+    //    而是先判断是否存在队列，如果存在就不抢了，返回抢锁失败
+    if (!hasQueuedPredecessors() &&
+        compareAndSetState(0, acquires)) {
+      setExclusiveOwnerThread(current);
+      return true;
     }
-} 
+  }
+  else if (current == getExclusiveOwnerThread()) {
+    int nextc = c + acquires;
+    if (nextc < 0)
+      throw new Error("Maximum lock count exceeded");
+    setState(nextc);
+    return true;
+  }
+  return false;
+}
+// 是否存在队列并且(下一个待唤醒的线程不是本线程(准备重入锁))
+public final boolean hasQueuedPredecessors() {
+  // The correctness of this depends on head being initialized
+  // before tail and on head.next being accurate if the current
+  // thread is first in queue.
+  Node t = tail; // Read fields in reverse initialization order
+  Node h = head;
+  Node s;
+  return h != t &&
+    ((s = h.next) == null || s.thread != Thread.currentThread());
+}
 ```
+
+于非公平锁相比，只有`tryAcquire` 方法的区别，
+
+
+
+#### 为什么需要再次抢锁?
+
+因为抢锁失败有两种原因，1是当前线程确实没有获取到锁。2是当前线程之前已经获取到锁了，还想再获取一次。
+
+对于1这种情况，让线程再抢一次，可能会抢到锁，就不用调用系统api把线程挂起，提高性能
+
+对于2， 只需改变加锁的次数，就可以标记当前线程已经加锁的次数了，再释放锁时，对应的减成0就可以认为当前线程已经完全释放锁了，这就是可重入锁的实现原理
+
+#### 构造队列节点及入队
+
+下面看一下构造线程节点的实现:  
+
+addWaiter()
+
+```java
+private Node addWaiter(Node mode) {
+  // 以当前线程为参数，构造一个新的 node，记作当前线程节点 
+  Node node = new Node(Thread.currentThread(), mode);
+  // 在最开始，tail 和 pred 肯定都是null,
+  Node pred = tail;
+  // 最开始不会进入下面，只有队列不为空时，才会进入
+  if (pred != null) {
+    node.prev = pred;
+    // 将节点加入队尾
+    if (compareAndSetTail(pred, node)) {
+      pred.next = node;
+      return node;
+    }
+  }
+  // 而是由 enq(node) 构造节点
+  enq(node);
+  return node;
+}
+private Node enq(final Node node) {
+  // 开始了循环
+  for (;;) {
+    Node t = tail;
+    // 最开始队列是空的。只有第一次循环会进入
+    if (t == null) { // Must initialize
+      // 构造了一个空的node节点当作队列的头节点
+      if (compareAndSetHead(new Node()))
+        tail = head;
+    } else {
+      // 第二次及后面的循环会走到这里
+      // 先设置当前节点的前驱节点是 队尾节点。
+      node.prev = t;
+      // 用CAS算法把当前节点 设置成队尾
+      if (compareAndSetTail(t, node)) {
+        // 这样上一次的队尾t就不是队尾了，t 就有了后继节点node
+        t.next = node;
+        return t;
+      }
+    }
+  }
+}
+```
+
+经过`addWaiter(Node node)` 方法后，队列中至少存在两个节点，第一个就是必须的空节点，不包含线程信息，第二个才是真正待执行的线程节点，作者为什么这么做呢？
+
+我认为，队列中存放的不仅是待唤醒的线程节点，而是所有等待运行和正在运行的线程节点，因为已经拿到锁的正在运行的线程不需要被唤醒，所以也就不需要存储线程信息了。并且这个正在运行的线程节点是队列中的头节点
+
+#### 线程挂起
+
+下面就要看`acquireQueued` 方法了
+
+```java
+final boolean acquireQueued(final Node node, int arg) {
+  boolean failed = true;
+  try {
+    boolean interrupted = false;
+    // 开始循环抢锁
+    for (;;) {
+      // 获取当前接节点的前驱节点
+      final Node p = node.predecessor();
+      // 如果前驱节点是头节点，并且抢锁成功
+      if (p == head && tryAcquire(arg)) {
+        // 把当前节点设置成头节点，setHead会清空node中的线程信息，和初始化时设置的空头节点一样
+        setHead(node);
+        // 断开前驱节点，旧的 head 会被垃圾回收
+        p.next = null; // help GC
+        failed = false;
+        return interrupted;
+      }
+      //走到这里说明不是头节点，或者抢锁失败
+      // shouldParkAfterFailedAcquire(p, node): 
+      //    检查 node 是否是可唤醒的（waitStatus == -1）,如果是，返回true
+      //    如果node不是可唤醒的，并且node没有被取消掉，则将node设置设置为可唤醒，返回false,
+      //    下一次循环时就会返回false
+      // parkAndCheckInterrupt(): 挂起线程
+      if (shouldParkAfterFailedAcquire(p, node) && parkAndCheckInterrupt())
+        interrupted = true;
+    }
+  } finally {
+    // 这个判断不会走，可以认为 failed 和 interrupted 标识这里无用。
+    // 程序能走到这里，说明 (p ==head && tryQcquire(arg)) 为true，那么 failed 和 interupted 恒为false
+    // 否则就会陷在循环中，无法到 finally 中。
+    if (failed)
+      cancelAcquire(node);
+  }
+}
+
+// 把node设置为队列的头节点
+private void setHead(Node node) {
+  head = node;
+  // 清空了线程信息
+  node.thread = null;
+  node.prev = null;
+}
+```
+
+shouldParkAfterFailedAcquire(Node pred, Node node)
+
+```java
+// 接受两个参数，一个是当前节点的前驱节点，一个是当前节点
+/**
+* 这里使用前驱节点中的waitStatus状态来判断当前节点是否可以被唤醒。
+*/
+private static boolean shouldParkAfterFailedAcquire(Node pred, Node node) {
+  // 前驱节点的状态
+  int ws = pred.waitStatus;
+  // 如果是可唤醒的，直接返回true
+  if (ws == Node.SIGNAL)
+    return true;
+  if (ws > 0) {
+    // 标识前驱节点已经取消锁竞争，跳过这个前驱节点，继续向前查找
+    do {
+      // 一直向前找
+      node.prev = pred = pred.prev;
+    } while (pred.waitStatus > 0); // 到不是已取消的节点为止
+    // 设置有效的前驱节点
+    pred.next = node;
+  } else {
+    // 将前驱节点的 ws 设置可唤醒的
+    compareAndSetWaitStatus(pred, ws, Node.SIGNAL);
+  }
+  return false;
+}
+```
+
+## 释放锁
+
+释放锁的逻辑比较简单，
+
+1. 减少加锁的次数(state)，如果state == 0, 代表当前线程可以释放锁，然后把持有锁的线程标记为空
+2. 唤醒队列中第一个待运行的线程也就是第二个节点，因为第一个节点是当前已获取到锁正在运行线程
+
+```java
+public final boolean release(int arg) {
+  // 释放锁
+  if (tryRelease(arg)) {
+    Node h = head;
+    // 头节点不为空，且头节点的waitStatus不是默认状态
+    if (h != null && h.waitStatus != 0)
+      //传入的是头节点
+      unparkSuccessor(h);
+    return true;
+  }
+  return false;
+}
+
+
+// 释放锁
+protected final boolean tryRelease(int releases) {
+  int c = getState() - releases;
+  if (Thread.currentThread() != getExclusiveOwnerThread())
+    throw new IllegalMonitorStateException();
+  boolean free = false;
+  if (c == 0) {
+    free = true;
+    setExclusiveOwnerThread(null);
+  }
+  setState(c);
+  return free;
+}
+
+private void unparkSuccessor(Node node) {
+
+  int ws = node.waitStatus;
+  if (ws < 0)
+    // 再次将ws 置为0，这里暂时不清楚为什么重置状态
+    compareAndSetWaitStatus(node, ws, 0);
+  // 获取传入节点的后继节点
+  Node s = node.next;
+  if (s == null || s.waitStatus > 0) {
+    s = null;
+    for (Node t = tail; t != null && t != node; t = t.prev)
+      if (t.waitStatus <= 0)
+        s = t;
+  }
+  // 唤醒后继节点
+  if (s != null)
+    LockSupport.unpark(s.thread);
+}
+```
+
+## 获取锁的流程图
+
+![](https://s2.loli.net/2022/10/09/Wo5y34enQ1j8CfD.png)
+
+## 队列中节点状态
+![](https://s2.loli.net/2022/10/09/fpiOgLdEby9Y3on.png)
+
