--- a/java/线程池的应用.md
+++ b/java/线程池的应用.md
@@ -162,9 +162,14 @@ public ThreadPoolExecutor(int corePoolSize,
 
 优先级： 核心线程数 > 任务队列 > 最大线程数 > 拒绝任 j 务
 
+### 核心线程数设置的一些经验
+- CPU 密集型: CPU 核数 + 1
+- IO 密集型: CPU 核数 * 2 + 1
+- 最佳线程数: CPU 核数 * （ 1 + （IO 耗时 / CPU 耗时））
 
 
-# 不同线程池源码的差 j 异
+
+# 不同线程池源码的差异
 Executors 工程类提供的四种方法其实底层还是调用了 ThreadPollExecutor, 只不过是参数不同罢了
 
 我们来看一下这 4 中方法底层的代码:
@@ -224,3 +229,4 @@ public static ExecutorService newSingleThreadExecutor() {
 核心线程数和最大线程数都是1， 不设置超时时间，使用无界队列存放任务。
 
 通过查看以上源码发现，这4中特定的线程池都是以不同参数调用了 `ThreadPoolExecutor` 来实现的。
+
