--- a/java/线程池原理.md
+++ b/java/线程池原理.md
@@ -96,7 +96,7 @@ private static int ctlOf(int rs, int wc) { return rs | wc; }
 
 如图：
 
-![image-20221020215828959](../images/image-20221020215828959.png)
+![](../images/2022-10-21-16-38-53.png)
 
 # execute 方法
 
