--- a/java/线程池原理.md
+++ b/java/线程池原理.md
@@ -136,7 +136,7 @@ public void execute(Runnable command) {
 
 流程图表示如下：
 
-![image-20221020215946741](../images/image-20221020215946741.png)
+![](../images/2022-10-21-16-43-07.png)
 
 # addWorker 方法
 
