--- a/java/定时任务和周期性任务线程池的应用及原理.md
+++ b/java/定时任务和周期性任务线程池的应用及原理.md
@@ -158,6 +158,17 @@ class Task implements Runnable {
 任务执行结束：Mon Oct 24 11:32:54 CST 2022
 ```
 
+# 周期性任务线程池应用场景
+## redis 锁续命
+当我们使用 redis 作为分布式锁时，需要给这个锁设置一个超时时间，避免因为程序出错而用不释放锁，但是这个超时时间不好估量，设置的短了，任务还没结束就释放锁了，设置的过长，程序异常情况下会长时间持有锁，影响程序性能。可以在获取锁之后使用一个周期性任务每秒检查锁是否存在，如果扔存在，就给这个锁延长时间，这样只需把锁的超时时间设置一个比较短的时间，后面依赖周期性任务续命即可。
+
+## 微服务注册中心
+各个微服务需要定时向注册中心上报自己的信息，确保该服务在正常运行
+
+# 与 Timer 的区别
+- Timer 也可以实现周期性任务，但是他是单线程的，如果任务执行中抛出异常，线程会终止，无法再次添加任务。
+- ScheduledThreadPool 在任务发生异常后，也会结束执行任务的线程，但紧接着会再创建一个新的线程去继续执行其他任务，但是这个发生异常的任务就从队列中移除了，无法再周期性执行。这也是特别需要注意的地方。在一点在 [线程池原理](https://blog.csdn.net/a141210104/article/details/127449620) 讲过
+
 # 延迟任务线程池的实现原理
 
 上述的延迟任务线程池底层采用`DelayQueue`存储等待的任务
@@ -282,6 +293,7 @@ private void setNextRunTime() {
 如果队列中包含多个任务，延迟队列还会把任务以到期时间排序，对头永远是最先到期的那个任务，如果到期时间相同，则按进入队列的顺序排。
 
 "延迟队列还会把任务以到期时间排序", 这其实并不是延时队列实现的功能，而是调用了队列中任务的 `compareTo` 方法来排序的，这就要求队列中的元素实现 Comparable 接口中的 compareTo 方法。 是的， ScheduledFutureTask 正是实现了这个方法：
+
 ```java
 public int compareTo(Delayed other) {
     if (other == this) // compare zero if same object
@@ -308,4 +320,6 @@ public int compareTo(Delayed other) {
 
 ```
 
-这篇文章并没有太过详细的讲解线程池更底层的逻辑，只是介绍了几个重点方法，因为大致思想和之前讲的 AQS 差不太多，需要考虑很多并发的场景，加入很多限制。
+每次只是从对头获取元素，所以只需保证对头的元素是最小的即可。底层并没有把整个队列中的元素做全排序，而是维护了一个堆的逻辑数据结构保证对头元素永远是最小的。关于堆的介绍，后续会写篇博客单独介绍
+
+这篇文章并没有太过详细的讲解线程池更底层的逻辑，只是介绍了几个重点方法，因为大致思想和之前讲的 AQS 差不太多，需要考虑很多并发的场景，加入很多限制
