--- a/java/自定义注解.md
+++ b/java/自定义注解.md
@@ -39,7 +39,7 @@ java SE5 内置了三种注解：
 ### @Documented
 将此注解包含在 javadoc中
 
-### Inherited
+### @Inherited
 允许子类继承父类中的注解
 
 
@@ -65,7 +65,7 @@ java SE5 内置了三种注解：
 
 @Target(ElementType.TYPE)
 @Retention(RetentionPolicy.RUNTIME)
-@interface DBTable{
+public @interface DBTable{
     // 表名, 规定：必须要有一个默认值，
     String name() default "";
 }
@@ -75,7 +75,7 @@ java SE5 内置了三种注解：
  */
 @Target(ElementType.FIELD)
 @Retention(RetentionPolicy.RUNTIME)
-@interface Constraints{
+public @interface Constraints{
     // 是否是主键
     boolean primary() default false;
     // 是否可以为空
@@ -89,7 +89,7 @@ java SE5 内置了三种注解：
  */
 @Target(ElementType.FIELD)
 @Retention(RetentionPolicy.RUNTIME)
-@interface SQLString{
+public @interface SQLString{
 
     /**
      *  让value代表 varchar的长度，value 是个比较特殊的名字，在使用该注解的时候，
@@ -106,7 +106,7 @@ java SE5 内置了三种注解：
  */
 @Target(ElementType.FIELD)
 @Retention(RetentionPolicy.RUNTIME)
-@interface SQLInt{
+public @interface SQLInt{
     // 列的名字
     String name() default "";
 }
@@ -119,7 +119,7 @@ java SE5 内置了三种注解：
  * 注解使用
  */
 @DBTable(name = "users")// 表名是useres
-class User {
+public class User {
     /**
      * 设置id是主键，唯一， 不能为空
      */
@@ -164,7 +164,7 @@ class User {
 /**
  * 注解处理器
  */
-class TableCreator{
+public class TableCreator{
     public String createTableSQLString(Class<?> cl) {
         // 获取类上的 DBTable 注解
         DBTable table = cl.getAnnotation(DBTable.class);
@@ -278,6 +278,9 @@ public class AnnotationDemo {
 
 
 ## 完整代码
+
+为了测试方便，把所有类都放在一个文件中了：
+
 ```java
 package io.dc;
 
