--- a/文摘/奇葩.md
+++ b/文摘/奇葩.md
@@ -9,3 +9,11 @@ tags: [文摘]
 不谈内心秩序 只讲爱与和平
 
 我们一路奋战，不是为了能改变世界，而是为了不让世界改变我们
+
+人类的本能是胆怯，人类的本质是不甘心
+
+我不想终极一生只满足了他人期待的样子
+
+我不怕千万人阻挡，我只怕自己投降
+
+散是漫天星 聚是一团火
