--- a/年记/2023.md
+++ b/年记/2023.md
@@ -4,10 +4,33 @@ date: 2023-01-01 00:00:00
 tags: [年记]
 ---
 
-## 我的 2023
+# 我的 2023
+
+## 代办
+
+### flutter 技能 
+- [x] 开始看 B 站教学视频
+- [ ] 视频看完，示例代码敲完 五月底完成 当前进度：【22 / 53】
+
+### java 技能
+- [x] RabbitMQ 技能，输出至少 3 篇博客
+- [ ] RocketMQ 技能， 输出至少 2 篇博客， 五月底完成
+- [ ] Kafka 技能，输出至少 5 篇博客，六月底完成
+- [ ] 整个教学视频看完， 八月底完成
+
+### 运动
+- [x] 体重减到 60 —— 61 公斤
+- [x] 三月跳绳次数 10 次，每次至少 30 分钟 
+- [x] 四月跳绳次数 10 次，每次至少 30 分钟 
+- [ ] 五分月跳绳次数 15 次，每次至少 30 分钟 
+- [ ] 六分月跳绳次数 15 次，每次至少 30 分钟 
+- [ ] 体重减到 55 公斤, (就是想看一下自己廋下来是什么样子)
+- [ ] 七分月跳绳次数 10 次，每次至少 30 分钟 
+- [ ] 六分月跳绳次数 10 次，每次至少 30 分钟 
+
+
 
 ### 2023-05-14
 
-这两天一直在折腾小爱音响，成功的把小爱音响接入了chatGPT，并且还可以让小爱同学调用自己的写的服务，来语音控制电脑。
+这两天一直在折腾小爱音响，成功的把小爱音响接入了 chatGPT，并且还可以让小爱同学调用自己的写的服务，来语音控制电脑。
 哈哈哈 ， 太开心了，虽然没有什么用处
-
