--- a/年记/2023.md
+++ b/年记/2023.md
@@ -8,25 +8,38 @@ tags: [年记]
 
 ## 代办
 
-### flutter 技能 
+### 五月
+#### flutter 技能 
 - [x] 开始看 B 站教学视频
 - [ ] 视频看完，示例代码敲完 五月底完成 当前进度：【22 / 53】
-
-### java 技能
+#### java 技能
 - [x] RabbitMQ 技能，输出至少 3 篇博客
-- [ ] RocketMQ 技能， 输出至少 2 篇博客， 五月底完成
-- [ ] Kafka 技能，输出至少 5 篇博客，六月底完成
-- [ ] 整个教学视频看完， 八月底完成
+- [ ] RocketMQ 技能， 输出至少 2 篇博客， 五月底完成, 当前进度: 【1/2】
+### 运动
+- [ ] 五分月跳绳次数 15 次，每次至少 30 分钟 【7/15】
+
+
+
+### 六月
+#### java 技能
+- [ ] Kafka 技能，输出至少 3 篇博客，六月15前完成
+#### 网络
+- [ ] WhireShark 抓包, 输出一篇笔记 6.15 前完成
+#### 运动
+- [ ] 六分月跳绳次数 15 次，每次至少 30 分钟 
+### js 
+- [ ] 熟练使用原生js  六月底完成,当前进度 【0%】
+- [ ] 可以编写 chrome 浏览器插件, 当前进度：【20%】
+
+
+### 七月
+- [ ] 整个java教学视频看完， 七月底完成
+- [ ] 七分月跳绳次数 10 次，每次至少 30 分钟 
 
 ### 运动
 - [x] 体重减到 60 —— 61 公斤
 - [x] 三月跳绳次数 10 次，每次至少 30 分钟 
 - [x] 四月跳绳次数 10 次，每次至少 30 分钟 
-- [ ] 五分月跳绳次数 15 次，每次至少 30 分钟 
-- [ ] 六分月跳绳次数 15 次，每次至少 30 分钟 
-- [ ] 体重减到 55 公斤, (就是想看一下自己廋下来是什么样子)
-- [ ] 七分月跳绳次数 10 次，每次至少 30 分钟 
-- [ ] 六分月跳绳次数 10 次，每次至少 30 分钟 
 
 
 
