--- a/文摘/要温柔.md
+++ b/文摘/要温柔.md
@@ -4,6 +4,8 @@ date: 1023-05-21 19:19:10
 tags: [文摘]
 ---
 
+![](../images/2023-05-21-19-32-21.png)
+
 **人生海海，山山而川，不过尔尔。**
 
 **若能避开猛烈的欢喜，自然不会有悲痛来袭。**
