--- a/文摘/隐晦.md
+++ b/文摘/隐晦.md
@@ -55,3 +55,44 @@ tags: [文摘]
 伞下人面桃花
 此生心愿已了
 生老病死由他
+
+
+# 委婉的表达生日
+
+地球又转到了太阳第一次照到我的地方
+
+今天没有流星，但是是可以许愿的日子
+
+与所有美好的存在又多了一年的故事
+
+故事不长，也不难讲，四字概括，生日快乐
+
+每天有每天的快乐，今天是生日快乐
+
+成长不期而遇，生日如期而至
+
+今天不想听大道理，只想吃小蛋糕
+
+
+# 分享欲
+
+为什么感情里分享欲望很重要？
+
+就好比有人问我你吃饭了吗？ 我的回答可以是吃了河边的阳春面，喝了热的杏仁茶，回来路上遇到很可爱的小狗，你要不要看看？
+我也可以回答： 刚吃完。
+
+话太多，对方会不会嫌烦？
+
+分享欲是生活细节拼接起来的爱意，他本不多余，只是分享错了人，才会变得很多余，话要和有回应的人说，饭要和投缘的人吃，日子要和懂你的人过。不能陪你岁岁年年的人，又怎么能陪你到岁岁年年呢
+
+------------------
+
+我对你好，是因为你很好，你值得，不是要你还。 我送你一枝花，我想看到你为这支花而高兴，而不是收到一束的回礼。
+没有一项的情分是可以还清的，人们彼此相爱，就注定彼此相欠。欠是爱的方式和特权
+
+
+-------
+
+好的感情是两个人一致对外，一起搞定这个世界，而不是在这个稀烂的世界里互相搞乱对方的心态。
+
+有人说在感情里不能太主动，要学会进退，知道欲擒故纵，可是爱哪有那么多手段，我们在一起不是为了猜来猜去，疑神疑鬼，是互相鼓励，相互支持，共同去面对困难，对抗这个世界
