--- a/js/代理.md
+++ b/js/代理.md
@@ -3,6 +3,29 @@ title: js中代理
 date: 2024-07-04 21:34:35
 tags: [js]
 ---
+- [代理原对象的 get 方法](#代理原对象的-get-方法)
+- [捕获器不变式](#捕获器不变式)
+- [可撤销代理](#可撤销代理)
+- [十三种捕获器](#十三种捕获器)
+  - [1. get()](#1-get)
+  - [2. set()](#2-set)
+  - [3. has 捕获器](#3-has-捕获器)
+  - [4. defineProperty() 捕获器](#4-defineproperty-捕获器)
+  - [5. getOwnPropertyDescriptor](#5-getownpropertydescriptor)
+  - [6. deleteProperty()](#6-deleteproperty)
+  - [7. ownKeys()](#7-ownkeys)
+  - [8. getPrototypeOf()](#8-getprototypeof)
+  - [9. setPrototypeOf()](#9-setprototypeof)
+  - [10. isExtensible()](#10-isextensible)
+  - [11. preventExtensions()](#11-preventextensions)
+  - [12. apply()](#12-apply)
+  - [13. construct()](#13-construct)
+- [常见代理使用场景](#常见代理使用场景)
+  - [跟踪属性访问](#跟踪属性访问)
+  - [隐藏属性](#隐藏属性)
+  - [属性验证](#属性验证)
+  - [构造函数参数验证](#构造函数参数验证)
+  - [数据绑定](#数据绑定)
 
 ## 代理原对象的 get 方法
 ```js
