--- a/dart/学习笔记.md
+++ b/dart/学习笔记.md
@@ -739,4 +739,48 @@ void main() {
 }
 ```
 
+## 常量
+### const 和 final
+- const 是编译时常量， final 是运行时常量
+- const 在声明变量时就要赋值，final 允许延迟赋值。
+- 均只能赋值一次
+
+```dart
+void main() {
+  // final 声明的常量可以在运行时赋值，但只能赋值一次
+  final int a;
+  a = 1;
+  // 再次赋值会报错
+  // a = 2;
+
+  // const 声明的常量，在声明时就要赋值
+  const int b = 1;
+  // 不可以改变
+  // b = 2;
+}
+```
+### 节省内存
+被 const 修饰的构造函数，参数一样时，多次构造出来的对象占用同一个内存空间
+
+`identical(a,b)` 判断 a b 的内存地址是否一样
+
+```dart
+class Person {
+  // 字段不可变
+  final int age;
+
+  // 常量构造函数，使用时才可以被 const 修饰
+  const Person(this.age);
+}
+
+void main() {
+  // 被 const 修饰的构造函数，参数一样时，构造出来的对象占用同一个内存空间
+  var p1 = const Person(10);
+  var p2 = const Person(10);
+  var p3 = const Person(20);
+  print(identical(p1, p2)); // true
+  print(identical(p1, p3)); //false
+}
+
+```
 > 联系方式：dccmmtop@foxmail.com
