--- a/flutter/图片组件.md
+++ b/flutter/图片组件.md
@@ -3,6 +3,18 @@ title: 图片组件
 date: 2024-12-04 22:04:46
 tags: [flutter]
 ---
+- [从网络加载图片](#从网络加载图片)
+  - [常用属性](#常用属性)
+    - [对齐方式, alignment](#对齐方式-alignment)
+    - [缩放  scale](#缩放--scale)
+    - [平铺方式 fit](#平铺方式-fit)
+    - [重复方式 repeat](#重复方式-repeat)
+  - [圆形图片](#圆形图片)
+    - [Container 方式](#container-方式)
+    - [ClipOval 方式](#clipoval-方式)
+    - [ClipOval 介绍](#clipoval-介绍)
+- [读取本地图片](#读取本地图片)
+
 
 ## 从网络加载图片
 ```dart
