--- a/flutter/列表组件.md
+++ b/flutter/列表组件.md
@@ -181,4 +181,229 @@ class MyList extends StatelessWidget {
 
 ![](../images/2024-12-11-08-30-05.png)
 
+
+
+
+# 自定义垂直列表组件
+children 中可以放任意组件:
+- 垂直列表组件无法设置宽度。会根据屏幕自适应
+
+```dart
+import 'package:flutter/material.dart';
+
+void main() {
+  runApp(
+    MaterialApp(
+      home: Scaffold(
+        appBar:
+            AppBar(title: const Text("App Title"), backgroundColor: Colors.red),
+        body: const MyList(),
+      ),
+    ),
+  );
+}
+
+class MyList extends StatelessWidget {
+  const MyList({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return Center(
+      child: ListView(
+        padding: const EdgeInsets.only(top: 5),
+        // 可以放任意组件, 垂直列表中，宽度根据屏幕自适应，不能手动设置宽度
+        children: [
+          Image.network(
+            "https://developer.qcloudimg.com/operation/attachment/900005/20241205-9e91b6ad.png",
+            height: 400,
+          ),
+          Container(
+            height: 60,
+            // 设置宽度无效
+            width: 100,
+
+            decoration: const BoxDecoration(color: Colors.red),
+          ),
+          Container(
+            height: 60,
+            decoration: const BoxDecoration(color: Colors.blue),
+          ),
+          Container(
+            height: 60,
+            decoration: const BoxDecoration(color: Colors.yellowAccent),
+          ),
+          Container(
+            height: 60,
+            decoration: const BoxDecoration(color: Colors.blueGrey),
+          ),
+        ],
+      ),
+    );
+  }
+}
+```
+**效果:**
+![](../images/2024-12-12-07-57-33.png)
+
+# 自定义水平列表
+- 水平列表中，如果没有给列表的父容器设置高度，则列表的高度根据屏幕自适应，不能手动设置宽度
+
+```dart
+import 'package:flutter/material.dart';
+
+void main() {
+  runApp(
+    MaterialApp(
+      home: Scaffold(
+        appBar:
+            AppBar(title: const Text("App Title"), backgroundColor: Colors.red),
+        body: const MyList(),
+      ),
+    ),
+  );
+}
+
+class MyList extends StatelessWidget {
+  const MyList({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return SizedBox(
+      // 父容器设置高度，控制列表整体的高度
+      height: 220,
+      child: ListView(
+        scrollDirection: Axis.horizontal,
+        padding: const EdgeInsets.only(top: 5),
+        // 水平列表中，如果没有给列表的父容器设置高度，则列表的高度根据屏幕自适应，不能手动设置宽度
+        children: [
+          Image.network(
+            "https://developer.qcloudimg.com/operation/attachment/900005/20241205-9e91b6ad.png",
+          ),
+          Container(
+            decoration: const BoxDecoration(color: Colors.red),
+            width: 100,
+            // 水平列表设置高度无效
+            height: 420,
+          ),
+          Container(
+            decoration: const BoxDecoration(color: Colors.blue),
+            width: 100,
+          ),
+          Container(
+            decoration: const BoxDecoration(color: Colors.yellowAccent),
+            width: 100,
+          ),
+          Container(
+            width: 100,
+            decoration: const BoxDecoration(color: Colors.blueGrey),
+          ),
+        ],
+      ),
+    );
+  }
+}
+```
+**效果:**
+![](../images/2024-12-12-08-08-39.png)
+
+# 实现水平列表商品效果
+```dart
+import 'package:flutter/material.dart';
+
+void main() {
+  runApp(
+    MaterialApp(
+      home: Scaffold(
+        appBar:
+            AppBar(title: const Text("App Title"), backgroundColor: Colors.red),
+        body: const MyList(),
+      ),
+    ),
+  );
+}
+
+class MyList extends StatelessWidget {
+  const MyList({super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return SizedBox(
+      // 父容器设置高度，控制列表整体的高度
+      height: 120,
+      child: ListView(
+        scrollDirection: Axis.horizontal,
+        // padding: const EdgeInsets.only(top: 5),
+        // 水平列表中，如果没有给列表的父容器设置高度，则列表的高度根据屏幕自适应，不能手动设置宽度
+        children: [
+          MyShop(
+            "https://img14.360buyimg.com/n0/jfs/t1/226009/21/18660/59607/664f0109Fd05e02d9/6fb2028c374334c7.jpg",
+            "键盘",
+          ),
+          const SizedBox(width: 5),
+          MyShop(
+            "https://img14.360buyimg.com/n0/jfs/t1/226009/21/18660/59607/664f0109Fd05e02d9/6fb2028c374334c7.jpg",
+            "键盘",
+          ),
+          const SizedBox(width: 5),
+          MyShop(
+            "https://img14.360buyimg.com/n0/jfs/t1/226009/21/18660/59607/664f0109Fd05e02d9/6fb2028c374334c7.jpg",
+            "键盘",
+          ),
+          const SizedBox(width: 5),
+          MyShop(
+            "https://img14.360buyimg.com/n0/jfs/t1/226009/21/18660/59607/664f0109Fd05e02d9/6fb2028c374334c7.jpg",
+            "键盘",
+          ),
+          const SizedBox(width: 5),
+          MyShop(
+            "https://img14.360buyimg.com/n0/jfs/t1/226009/21/18660/59607/664f0109Fd05e02d9/6fb2028c374334c7.jpg",
+            "键盘",
+          ),
+          const SizedBox(width: 5),
+          MyShop(
+            "https://img14.360buyimg.com/n0/jfs/t1/226009/21/18660/59607/664f0109Fd05e02d9/6fb2028c374334c7.jpg",
+            "键盘",
+          ),
+          const SizedBox(width: 5),
+          MyShop(
+            "https://img14.360buyimg.com/n0/jfs/t1/226009/21/18660/59607/664f0109Fd05e02d9/6fb2028c374334c7.jpg",
+            "键盘",
+          ),
+        ],
+      ),
+    );
+  }
+}
+
+class MyShop extends StatelessWidget {
+  String imgUrl;
+  String text;
+
+  MyShop(this.imgUrl, this.text, {super.key});
+
+  @override
+  Widget build(BuildContext context) {
+    return Container(
+      decoration: const BoxDecoration(
+        color: Colors.blueGrey,
+      ),
+      width: 100,
+      child: Column(
+        children: [
+          SizedBox(
+            height: 100,
+            child: Image.network(
+              imgUrl,
+            ),
+          ),
+          Text(text),
+        ],
+      ),
+    );
+  }
+}
+```
+
+**效果**
+![](../images/2024-12-12-08-30-16.png)
 > 联系方式: dccmmtop@foxmail.com
