--- a/flutter/列表组件.md
+++ b/flutter/列表组件.md
@@ -3,6 +3,20 @@ title: 列表组件
 date: 2024-12-11 08:19:00
 tags: [flutter]
 ---
+- [ListView 常用属性讲解](#listview-常用属性讲解)
+  - [1. children](#1-children)
+  - [3. separatorBuilder](#3-separatorbuilder)
+  - [4. scrollDirection](#4-scrolldirection)
+  - [5. physics](#5-physics)
+  - [6. shrinkWrap](#6-shrinkwrap)
+  - [7. padding](#7-padding)
+  - [8. itemExtent](#8-itemextent)
+- [ListTile 使用](#listtile-使用)
+- [自定义垂直列表组件](#自定义垂直列表组件)
+- [自定义水平列表](#自定义水平列表)
+- [实现水平列表商品效果](#实现水平列表商品效果)
+- [ListView.builder 使用](#listviewbuilder-使用)
+
 # ListView 常用属性讲解
 
 `ListView` 是 Flutter 中用于展示滚动列表的一个非常常用的小部件。以下是一些常用的 `ListView` 属性及其说明：
@@ -406,4 +420,111 @@ class MyShop extends StatelessWidget {
 
 **效果**
 ![](../images/2024-12-12-08-30-16.png)
+
+
+# ListView.builder 使用
+
+准备数据: **data.dart**
+```dart
+class Data {
+  static List<Map<String, String>> blogs = [
+    {
+      "title": "晨曦曙光",
+      "subtitle": "黎明的第一缕阳光",
+    },
+    {
+      "title": "森林漫步",
+      "subtitle": "绿叶间的宁静小径",
+    },
+    {
+      "title": "海洋之心",
+      "subtitle": "深蓝海面下的神秘世界",
+    },
+    {
+      "title": "雪山之巅",
+      "subtitle": "白色世界的壮丽景观",
+    },
+    {
+      "title": "城市夜景",
+      "subtitle": "夜晚灯光下的都市风情",
+    },
+    {
+      "title": "静谧湖泊",
+      "subtitle": "倒映天空的平静湖水",
+    },
+    {
+      "title": "星空奇观",
+      "subtitle": "繁星点点的浩瀚宇宙",
+    },
+    {
+      "title": "古老城堡",
+      "subtitle": "岁月沉淀的历史建筑",
+    },
+    {
+      "title": "瀑布轰鸣",
+      "subtitle": "水流奔腾而下的壮观景象",
+    },
+    {
+      "title": "沙漠绿洲",
+      "subtitle": "干旱中的生命奇迹",
+    },
+    {
+      "title": "热带雨林",
+      "subtitle": "丰富的生物多样性",
+    }
+  ];
+}
+```
+
+**main.dart**
+```dart
+import 'package:flutter/material.dart';
+import './data.dart';
+
+void main() {
+  runApp(
+    MaterialApp(
+      home: Scaffold(
+        appBar:
+            AppBar(title: const Text("App Title"), backgroundColor: Colors.red),
+        body: MyList(),
+      ),
+    ),
+  );
+}
+
+class MyList extends StatelessWidget {
+  MyList({super.key}) {
+    initData();
+  }
+  List<Widget> blogs = [];
+
+  initData() {
+    // Data.blogs 是 data.dart 中的数据 也可以来自网络
+    for (Map<String, String> value in Data.blogs) {
+      ListTile listTile = ListTile(
+        title: Text(value["title"]!),
+        subtitle: Text(value["subtitle"]!),
+        // leading: Image.network(value["image_url"]!),
+      );
+      blogs.add(listTile);
+    }
+  }
+
+  @override
+  Widget build(BuildContext context) {
+    return ListView.builder(
+      // 此字段必填, 否则数量不确定，会数组越界
+      itemCount: blogs.length,
+      // 构建列表元素
+      itemBuilder: (context, index) {
+        return blogs[index];
+      },
+    );
+  }
+}
+```
+
+**效果**
+![](../images/2024-12-12-22-41-21.png)
 > 联系方式: dccmmtop@foxmail.com
